--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,30 @@
-<div>
-  <h2>Shopping List</h2>
+<div id="wrapper">
+  <div [class.loading]="(loading$ | async)" id="shopping-list" *ngIf="!(error$ | async); else error">
+    <div id="list">
+      <h2>
+        Shopping List
+      </h2>
 
-  <ul>
-    <li *ngFor="let shopping of shoppingItems$ | async">
-      {{shopping.name}}
-      <button type="button" (click)="removeItem(shopping.id)">-</button>
-    </li>
-  </ul>
+        <ul *ngIf="(shoppingItems | async); else noItems">
+          <li *ngFor="let shopping of shoppingItems | async" (click)="deleteItem(shopping.id)">
+            <span>{{ shopping.name }}</span>
+          </li>
+        </ul>
+
+      <ng-template #noItems>
+        <ul>
+          <li style="max-width:250px;margin:0 auto;">No items found. Are you sure there's <em>nothing</em> you want?</li>
+        </ul>
+      </ng-template>
+    </div>
+
+    <form (ngSubmit)="addItem()">
+      <input type="text" [(ngModel)]="newShoppingItem.name" placeholder="Item" name="itemName"/>
+      <button type="submit" >+</button>
+    </form>
+  </div>
 </div>
 
-<div>
-  <form (ngSubmit)="addItem()">
-    <input type="text" [(ngModel)]="newShoppingItem.name"
-          placeholder="Enter New Item" name="itemName" />
-    <button type="submit">+</button>
-  </form>
-</div>
+<ng-template #error>
+  <h2>{{(error$ | async)?.message}}</h2>
+</ng-template>
