--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         Shopping List
       </h2>
 
-        <ul *ngIf="(shoppingItems | async); else noItems">
+        <ul *ngIf="(shoppingItems$ | async); else noItems">
           <li *ngFor="let shopping of shoppingItems$ | async" (click)="deleteItem(shopping.id)">
             <span>{{ shopping.name }}</span>
           </li>
